# omni_wheel_controller

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
config/: controller.yaml
include/omni_wheel_controller/: kinematics.hpp  odom_integrator.hpp  omni_controller.hpp  omni_wheel_controller.hpp
launch/: test_controller.launch.py  test_omni_controller.launch.py
src/: kinematics.cpp  odom_integrator.cpp  omni_controller.cpp  omni_wheel_controller.cpp
