<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_wheel_controller</name>
  <version>0.1.0</version>
  <description>Three-wheel omni controller (cmd_vel → wheel velocities) with odom+TF. ROS 2 Humble.</description>
  <maintainer email="braib@gmail.com">braib</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool (required) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time dependencies (needed to compile/link this package) -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rcutils</build_depend>

  <!-- Runtime / execution dependencies (needed when running the package, e.g. by launch files) -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <depend>realtime_tools</depend>
  
  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Optional: test / lint dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export plugin description so pluginlib/controller_manager can discover this plugin at runtime -->
  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>